5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_1804.log
== TEST (2019-04-09 18:19:25) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
form math import *
float(print(sqrt((xb-xa)*2 + (yb-ya)*2))
-- ERROR:
File "XXXX", line 5
    form math import *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:19:36) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
float(print(sqrt((xb-xa)*2 + (yb-ya)*2))
-- ERROR:
File "XXXX", line 7
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:20:14) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
print(float(sqrt((xb-xa)*2 + (yb-ya)*2)))
-- OUTPUT:
2.449489742783178
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:21:11) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
print(float(round(sqrt((xb-xa)*2 + (yb-ya)*2)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float(round(sqrt((xb-xa)*2 + (yb-ya)*2)),2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:23:32) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
d=sqrt((xb-xa)*2+(yb-ya)*2)
print(float(round(d,2)))
-- OUTPUT:
2.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:23:58) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
d=sqrt((xb-xa)*2+(yb-ya)*2)
print(float(round(d,3)))
-- EXECUTION TIME:
0.159362
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
2.449
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
1.612
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
2.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:24:58) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
d=sqrt((xb-xa)*2+(yb-ya)*2)
print(float(round(d,3)))
-- OUTPUT:
2.449
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:25:28) 
-- CODE:
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
from math import *
d=sqrt((xb-xa)*2+(yb-ya)*2)
print(float(round(d,3)))
-- EXECUTION TIME:
0.203509
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
2.449
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
1.612
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
2.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:29:46) 
-- CODE:
from math import *
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
d=sqrt((xb-xa)*2+(yb-ya)*2)
print(float(round(d,3)))
-- EXECUTION TIME:
0.134127
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
2.449
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
1.612
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
2.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:30:35) 
-- CODE:
from math import *
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
d=sqrt((xb-xa)*2+(yb-ya)*2)
print(round(d,3))
-- EXECUTION TIME:
0.130579
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
2.449
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
1.612
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
2.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:31:16) 
-- CODE:
from math import *
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
d=sqrt((xb-xa)**2+(yb-ya)**2)
print(round(d,3))
-- EXECUTION TIME:
0.150683
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:32:20) 
-- CODE:
from math import *
xa=float(input("x de a: "))
ya=float(input("y de a: "))
xb=float(input("x de b: "))
yb=float(input("y de b: "))
d=sqrt((xb-xa)**2+(yb-ya)**2)
print(float(round(d,3)))
-- EXECUTION TIME:
0.13388
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
